--- a/DTMST/.classpath
+++ b/DTMST/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="jars/commons-csv-1.2.jar"/>
 	<classpathentry kind="lib" path="jars/weka.jar"/>
+	<classpathentry kind="lib" path="jars/guava-18.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
