--- a/DTMST/.classpath
+++ b/DTMST/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="jars/commons-csv-1.2.jar"/>
 	<classpathentry kind="lib" path="jars/weka.jar"/>
 	<classpathentry kind="lib" path="jars/guava-18.0.jar"/>
+	<classpathentry kind="lib" path="jars/liblinear-java-1.95.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
