--- a/DTMST/.classpath
+++ b/DTMST/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="jars/weka.jar"/>
 	<classpathentry kind="lib" path="jars/guava-18.0.jar"/>
 	<classpathentry kind="lib" path="jars/liblinear-java-1.95.jar"/>
+	<classpathentry kind="lib" path="jars/libsvm.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
